--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,2 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
+body,
+html {
+  height: 100%;
+}
+
+.default-full-bg {
+  background-image: url('../public/img/haru-default-bg-1440.png');
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.main-board {
+  background-color: rgb(256, 256, 256, 0.3);
+  margin: auto;
+  border-radius: 6.2rem;
+}
+
+/* width, height */
+.h-100 {
+  height: 100%;
+}
+.h-80 {
+  height: 80%;
+}
+.w-100 {
+  height: 100%;
+}
+.w-70 {
+  width: 70%;
+}
