--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,13 +5,14 @@ html {
   height: 100%;
 }
 
-.default-full-bg {
+.App {
   background-image: url('../public/img/haru-default-bg-1440.png');
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .main-board {
   background-color: rgb(256, 256, 256, 0.3);
   margin: auto;
@@ -26,7 +27,7 @@ html {
   height: 80%;
 }
 .w-100 {
-  height: 100%;
+  width: 100%;
 }
 .w-70 {
   width: 70%;
