--- a/frontend/src/Components/Widgets/Calendar/Calendar.css
+++ b/frontend/src/Components/Widgets/Calendar/Calendar.css
@@ -9,78 +9,72 @@
     display: flex;
     color: white;
 }
-.calendarCalendar{
+.calendar-back{
     width: 70%;
     height:100%;   
 }
-.claendarControl{
+.claendar-control{
     width: 30;
     height:100%;    
 }
-.calendarTitle{
+.calendar-title{
     width: 55.38%;
     height: 17.25%;  
     margin-left:8%;
 
 }
-.calendarHead{
+.calendar-head{
     width: 100%;
     height: 9.9%;
 }
-.calendarMain{
+.calendar-main{
     height: 72.85%;
 }
-.calendarTitleIconImg{
+.calendar-title-icon-img{
     margin-top: 2.38%;
     width: 17.57%;
     height: 100%;
 }
-.calendartitleTitle{
+.calendar-title-titles{
     margin-left: 4.5%;
     height: 100%;
     font-size: 2rem;
     font-weight: bold;
 }
-.titleCalendar{
-    font-size: 2rem;
-    
-}
-.calendarImports{
+.calendar-head-flex{
     width: 100%;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     font-weight:bold;
+    display: flex;
 }
-.calendarMonthYear{
+.calendar-monthyear{
     margin-left: 7.1%;
     width: 25%;
     display: flex;
 }
-.calendarYear{
+.calendar-year{
     width: 50%;
 }
-.calendarMonth{
+.calendar-month{
 }
-.titleOfCalendar{
+.calendar-subtitle{
     width: 65%;
     text-align: right;
 }
-.calendarMainContainer{
+.calendar-maincontainer{
     margin-left: 6.15%;
     width: 87.7%;
     height: 91%;
 }
-.calendarWeekends{
+.calendar-weekends{
     height: 7%;
     font-size: 0.6rem;
 }
-.calendarDates{
-
+.calendar-dates{
 }
-.calendarDatesRow{
+.calendar-dates-row{
 }
-
-
-.calendarWeekendsInner{
+.calendar-Weekends-content{
     text-align: center;
     width: 14.2857%;
     height:10%;
@@ -98,21 +92,17 @@
     color:grey;
 
 }
-.nextMonth{
+.nextmonth{
     color:grey;
 }
-
-
-.dateColum{
+.date-column{
     height: 90%;
     margin-left: 2%;
     background-color: rgb(256, 256, 256, 0.2);
 
     border-radius: 0.5rem;
 }
-
-
-.dateColumOver{
+.date-colum-dateover{
     height: 90%;
     margin-left: 2%;
     width: 0px;
@@ -121,46 +111,21 @@
     border-radius: 0.5rem;
 }
 
-.dateColumnDates{
+.date-column-dates{
     position: relative;
-    font-size:0.7rem;
+    font-size:0.7rem;   
     left:-60%;
     text-align: left;
 }
 
 
-.dateColumnDatesOver{
+.date-column-dates-dateover{
     position: relative;
-    width: 10%;
-    font-size: 0.1rem !important;;
+    font-size: 0.1rem !important;
     left:-60%;
     text-align: left;
 }
-.dateColumeMain{
+.date-colume-content{
 
 }
 
-
-.calendarDatesoverPosition{
-    width: 1.3rem;
-    height: 1.3rem;
-    position: relative;
-}
-.calendarSlashUp{
-    position:absolute;
-    text-align: left;
-
-}
-.calendarSlash{
-    position:absolute;
-    text-align: center;
-    left:0.5rem;
-    top: 0.rem;
-}
-.calendarSlashDown{
-    position:absolute;
-    text-align: right;
-    left:0.6rem;
-    top: 0.6rem;
-
-}
