--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,6 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap'); */
-*/ body,
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
+
+body,
 html {
   height: 100%;
   font-family: 'Montserrat', sans-serif !important ;
@@ -77,6 +78,9 @@ html {
 .h-70 {
   height: 70%;
 }
+.h-40 {
+  height: 40%;
+}
 .w-100 {
   width: 100%;
 }
@@ -88,6 +92,9 @@ html {
 }
 .w-50 {
   width: 50%;
+}
+.w-30 {
+  width: 30%;
 }
 
 input::placeholder {
