--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
-
-body,
-html {
+body {
   height: 100%;
   font-family: 'Montserrat', sans-serif !important ;
   font-family: 'Noto Sans KR', sans-serif !important;
@@ -9,69 +7,23 @@ html {
 
 .App {
   background-image: url('../public/img/haru-default-bg-1440.png');
-  height: 100vh;
+  width: 100vw;
+  min-width: fit-content;
+  max-width: 100%;
+  max-height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.main-board {
-  background-color: rgb(256, 256, 256, 0.3);
-  margin: auto;
-  border-radius: 6.2rem;
-}
-.todo-board {
-  background-color: rgb(256, 256, 256, 0.3);
-  border-top-left-radius: 6.2rem;
-  border-bottom-left-radius: 6.2rem;
-}
-.sub-board {
-  background-color: rgb(256, 256, 256, 0.3);
-  margin: auto;
-  border-radius: 3.1rem;
-}
-.big-title {
-  font-family: 'Montserrat', sans-serif !important ;
-  font-size: 30px;
-  font-weight: bold;
-  color: white;
-}
-.small-title {
-  font-family: 'Montserrat', sans-serif !important ;
-  font-size: 20px;
-  font-weight: bold;
-  color: white;
-}
-.todo-board {
-  background-color: rgb(256, 256, 256, 0.3);
-  border-top-left-radius: 6.2rem;
-  border-bottom-left-radius: 6.2rem;
-}
-.sub-board {
-  background-color: rgb(256, 256, 256, 0.3);
-  margin: auto;
-  border-radius: 3.1rem;
-}
-.big-title {
-  font-family: 'Montserrat', sans-serif !important ;
-  font-size: 30px;
-  font-weight: bold;
-  color: white;
-}
-.small-title {
-  font-family: 'Montserrat', sans-serif !important ;
-  font-size: 20px;
-  font-weight: bold;
-  color: white;
-}
-:hover.today-hover {
-  cursor: pointer;
+.wrap {
+  width: 75%;
+  min-width: 992px;
+  height: fit-content;
+  min-height: 100vh;
 }
 
 /* width, height */
-.h-100 {
-  height: 100%;
-}
 .h-80 {
   height: 80%;
 }
@@ -81,24 +33,12 @@ html {
 .h-40 {
   height: 40%;
 }
-.w-100 {
-  width: 100%;
-}
 .w-80 {
   width: 80%;
 }
 .w-70 {
   width: 70%;
 }
-.w-50 {
-  width: 50%;
-}
 .w-30 {
   width: 30%;
-}
-
-input::placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: rgb(256, 256, 256, 0.6);
-  font-weight: lighter;
 }
