--- a/frontend/src/Components/Widgets/Calendar/Calendar.css
+++ b/frontend/src/Components/Widgets/Calendar/Calendar.css
@@ -1,5 +1,5 @@
 .board {
-  background-color: rgb(256, 256, 256, 0.3);
+  background-color: rgb(256, 256, 256, 0.1);
   margin: auto;
 }
 .full100 {
@@ -120,7 +120,7 @@
 }
 .date-column {
   width: 13%;
-  background-color: rgb(256, 256, 256, 0.2);
+  background-color: rgb(255, 255, 255, 0.1);
   margin-left: 1%;
   border-radius: 0.5rem;
 }
@@ -160,7 +160,7 @@
   overflow: hidden;
   width: 100%;
   height: 72%;
-  background-color: rgb(256, 256, 256, 0.3);
+  background-color: rgba(255, 255, 255, 0.3);
   border-radius: 1rem;
   text-align: center;
 }
@@ -168,7 +168,7 @@
 .calendar-detail-title {
   width: 100%;
   height: 100%;
-  background-color: rgb(256, 256, 256, 0.3);
+  background-color: rgba(255, 255, 255, 0.1);
   text-align: center;
   border-radius: 0.5rem;
   border: 0px;
@@ -184,7 +184,7 @@
 }
 .calendar-schedule-detail-button {
   color: black;
-  background-color: rgb(256, 256, 256, 0.3);
+  background-color: rgb(255, 255, 255, 0.1);
   text-align: left;
   border-radius: 0.5rem;
   border: 0px;
