--- a/frontend/src/Components/Widgets/Bookmark/index.css
+++ b/frontend/src/Components/Widgets/Bookmark/index.css
@@ -5,3 +5,20 @@
   border-radius: 3rem;
   padding: 1rem;
 }
+
+.bookmark-minus-button {
+  width: 0.8rem;
+  height: 0.8rem;
+  border: 0.12rem solid;
+  border-radius: 0.4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+}
+
+.bookmark-minus-button:hover {
+  cursor: pointer;
+}
