--- a/frontend/src/Components/Common/Title/BigTitle.css
+++ b/frontend/src/Components/Common/Title/BigTitle.css
@@ -1,6 +1,10 @@
 .big-title {
   font-family: 'Montserrat', sans-serif !important ;
-  font-size: 30px;
+  font-size: 1.5rem;
   font-weight: bold;
   color: white;
+}
+.big-title-img {
+  width: 1.5rem;
+  height: 1.5rem;
 }
