--- a/frontend/src/Components/Widgets/Project/index.css
+++ b/frontend/src/Components/Widgets/Project/index.css
@@ -1,5 +1,10 @@
+.pjt-board {
+  background-color: rgba(255,255,255,0.1);  
+  width: 100%;
+  border-radius: 4rem;
+}
 .pjt-card {
-  background-color: rgba(255,255,255,0.5);  
+  background-color: rgba(255,255,255,0.2);  
   border-radius: 1rem;
 }
 .fs-sm {
