fix:26.02 calendar fix(#49)

--- a/frontend/src/Components/Widgets/Calendar/Calendar.css
+++ b/frontend/src/Components/Widgets/Calendar/Calendar.css
@@ -52,6 +52,10 @@
   height: 20%;
   margin-bottom: 1%;
 }
+.calendar-dates-week4 {
+  height: 25%;
+  margin-bottom: 1%;
+}
 .calendar-dates-row {
   font-weight: bold;
   display: flex;
