--- a/frontend/src/Components/Widgets/Basic/index.css
+++ b/frontend/src/Components/Widgets/Basic/index.css
@@ -25,3 +25,12 @@ input::placeholder {
   color: rgb(256, 256, 256, 0.6);
   font-weight: lighter;
 }
+
+.login-img {
+  width: 1.3rem;
+  height: 1.3rem;
+}
+
+.login-comment {
+  color: white;
+}
