--- a/frontend/src/Components/Widgets/Project/index.css
+++ b/frontend/src/Components/Widgets/Project/index.css
@@ -2,6 +2,7 @@
   background-color: rgba(255,255,255,0.1);  
   width: 100%;
   border-radius: 4rem;
+  padding-bottom: 1rem;
 }
 .pjt-card {
   background-color: rgba(255,255,255,0.2);  
