--- a/frontend/src/Components/Widgets/Project/index.css
+++ b/frontend/src/Components/Widgets/Project/index.css
@@ -1,11 +1,10 @@
 .pjt-board {
-  background-color: rgba(255,255,255,0.1);  
-  width: 100%;
-  border-radius: 4rem;
-  padding-bottom: 1rem;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 3rem;
+  padding: 1rem;
 }
 .pjt-card {
-  background-color: rgba(255,255,255,0.2);  
+  background-color: rgba(255, 255, 255, 0.2);
   border-radius: 1rem;
 }
 .fs-sm {
